parser.output
Terminals unused in grammar

    TK_EOF


Grammar

    0 $accept: single_command $end

    1 single_command: command

    2 command: cmd_assert
    3        | cmd_check_sat
    4        | cmd_declare_const
    5        | cmd_declare_datatype
    6        | cmd_declare_datatypes
    7        | cmd_declare_fun
    8        | cmd_declare_sort
    9        | cmd_define_fun
   10        | cmd_define_sort
   11        | cmd_echo
   12        | cmd_exit
   13        | cmd_pop
   14        | cmd_push
   15        | cmd_reset
   16        | cmd_set_logic
   17        | cmd_set_info
   18        | cmd_set_option
   19        | cmd_get_unsat_core
   20        | cmd_error

   21 cmd_error: %empty

   22 cmd_assert: '(' "assert" a_term ')'

   23 cmd_check_sat: '(' "check-sat" ')'

   24 cmd_declare_const: '(' "declare-const" SYMBOL a_sort ')'

   25 cmd_declare_datatype: '(' "declare-datatype" SYMBOL datatype_dec ')'

   26 cmd_declare_datatypes: '(' "declare-datatypes" '(' sort_dec_list ')' '(' datatype_dec_list ')' ')'

   27 cmd_declare_fun: '(' "declare-fun" SYMBOL '(' ')' a_sort ')'
   28                | '(' "declare-fun" SYMBOL '(' sort_list ')' a_sort ')'

   29 cmd_declare_sort: '(' "declare-sort" SYMBOL NUMERAL ')'

   30 cmd_define_fun: '(' "define-fun" SYMBOL '(' ')' a_sort a_term ')'
   31               | '(' "define-fun" SYMBOL '(' sorted_var_list ')' a_sort a_term ')'

   32 cmd_define_sort: '(' "define-sort" SYMBOL '(' ')' a_sort ')'

   33 cmd_echo: '(' "echo" STRING ')'

   34 cmd_exit: '(' "exit" ')'

   35 cmd_pop: '(' "pop" NUMERAL ')'

   36 cmd_push: '(' "push" NUMERAL ')'

   37 cmd_reset: '(' "reset" ')'

   38 cmd_set_info: '(' "set-info" KEYWORD ')'
   39             | '(' "set-info" KEYWORD attribute_value ')'

   40 cmd_set_logic: '(' "set-logic" SYMBOL ')'

   41 cmd_set_option: '(' "set-option" KEYWORD attribute_value ')'

   42 cmd_get_unsat_core: '(' "get-unsat-core" ')'

   43 sort_dec_list: sort_dec
   44              | sort_dec_list sort_dec

   45 sort_dec: '(' SYMBOL NUMERAL ')'

   46 datatype_dec_list: datatype_dec
   47                  | datatype_dec_list datatype_dec

   48 datatype_dec: '(' constructor_dec_list ')'

   49 constructor_dec_list: constructor_dec
   50                     | constructor_dec_list constructor_dec

   51 constructor_dec: '(' SYMBOL ')'
   52                | '(' SYMBOL selector_dec_list ')'

   53 selector_dec_list: selector_dec
   54                  | selector_dec_list selector_dec

   55 selector_dec: '(' SYMBOL a_sort ')'

   56 a_term: spec_constant
   57       | qual_identifier
   58       | '(' qual_identifier term_list ')'
   59       | '(' "let" '(' parallel_var_bindings ')' a_term ')'
   60       | '(' "forall" '(' sorted_var_list ')' a_term ')'
   61       | '(' "exists" '(' sorted_var_list ')' a_term ')'
   62       | '(' "match" a_term '(' match_case_list ')' ')'
   63       | '(' "!" a_term attribute_list ')'

   64 qual_identifier: identifier
   65                | '(' "as" identifier a_sort ')'

   66 term_list: a_term
   67          | term_list a_term

   68 parallel_var_bindings: var_bindings

   69 var_bindings: var_binding
   70             | var_bindings var_binding

   71 var_binding: '(' SYMBOL a_term ')'

   72 sorted_var_list: sorted_var
   73                | sorted_var_list sorted_var

   74 sorted_var: '(' SYMBOL a_sort ')'

   75 match_case_list: match_case
   76                | match_case_list match_case

   77 match_case: '(' pattern a_term ')'

   78 pattern: SYMBOL
   79        | '(' SYMBOL symbol_list ')'

   80 symbol_list: SYMBOL
   81            | symbol_list SYMBOL

   82 a_sort: identifier
   83       | '(' identifier sort_list ')'

   84 sort_list: a_sort
   85          | sort_list a_sort

   86 attribute_value: spec_constant
   87                | SYMBOL
   88                | '(' ')'
   89                | '(' generic_sexpr_list ')'

   90 attribute_list: attribute
   91               | attribute_list attribute

   92 attribute: ":named" SYMBOL
   93          | ":pattern" '(' term_list ')'
   94          | ":qid" SYMBOL
   95          | ":no-pattern" '(' term_list ')'
   96          | ":skolemid" SYMBOL
   97          | ":lblpos" SYMBOL
   98          | ":lblneg" SYMBOL
   99          | ":weight" NUMERAL

  100 index: NUMERAL
  101      | SYMBOL

  102 index_list: index
  103           | index_list index

  104 identifier: SYMBOL
  105           | '(' "_" SYMBOL index_list ')'

  106 spec_constant: NUMERAL
  107              | DECIMAL
  108              | HEXADECIMAL
  109              | BINARY
  110              | STRING

  111 generic_sexpr: spec_constant
  112              | SYMBOL
  113              | KEYWORD
  114              | '(' ')'
  115              | '(' generic_sexpr_list ')'

  116 generic_sexpr_list: generic_sexpr
  117                   | generic_sexpr_list generic_sexpr


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 45 48 51 52 55 58 59 60 61 62 63 65 71 74 77 79 83 88 89 93 95 105 114 115
    ')' (41) 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 45 48 51 52 55 58 59 60 61 62 63 65 71 74 77 79 83 88 89 93 95 105 114 115
    error (256)
    NUMERAL <string> (258) 29 35 36 45 99 100 106
    DECIMAL <string> (259) 107
    HEXADECIMAL <string> (260) 108
    BINARY <string> (261) 109
    SYMBOL <string> (262) 24 25 27 28 29 30 31 32 40 45 51 52 55 71 74 78 79 80 81 87 92 94 96 97 98 101 104 105 112
    KEYWORD <string> (263) 38 39 41 113
    STRING <string> (264) 33 110
    TK_EOF (265)
    "!" (266) 63
    "_" (267) 105
    "as" (268) 65
    "exists" (269) 61
    "forall" (270) 60
    "let" (271) 59
    "match" (272) 62
    "assert" (273) 22
    "check-sat" (274) 23
    "declare-const" (275) 24
    "declare-datatype" (276) 25
    "declare-datatypes" (277) 26
    "declare-fun" (278) 27 28
    "declare-sort" (279) 29
    "define-fun" (280) 30 31
    "define-sort" (281) 32
    "echo" (282) 33
    "exit" (283) 34
    "pop" (284) 35
    "push" (285) 36
    "set-info" (286) 38 39
    "set-logic" (287) 40
    "set-option" (288) 41
    "get-unsat-core" (289) 42
    ":pattern" (290) 93
    ":named" (291) 92
    "reset" (292) 37
    ":qid" (293) 94
    ":no-pattern" (294) 95
    ":skolemid" (295) 96
    ":lblpos" (296) 97
    ":lblneg" (297) 98
    ":weight" (298) 99


Nonterminals, with rules where they appear

    $accept (46)
        on left: 0
    single_command (47)
        on left: 1
        on right: 0
    command (48)
        on left: 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20
        on right: 1
    cmd_error (49)
        on left: 21
        on right: 20
    cmd_assert (50)
        on left: 22
        on right: 2
    cmd_check_sat (51)
        on left: 23
        on right: 3
    cmd_declare_const (52)
        on left: 24
        on right: 4
    cmd_declare_datatype (53)
        on left: 25
        on right: 5
    cmd_declare_datatypes (54)
        on left: 26
        on right: 6
    cmd_declare_fun (55)
        on left: 27 28
        on right: 7
    cmd_declare_sort (56)
        on left: 29
        on right: 8
    cmd_define_fun (57)
        on left: 30 31
        on right: 9
    cmd_define_sort (58)
        on left: 32
        on right: 10
    cmd_echo (59)
        on left: 33
        on right: 11
    cmd_exit (60)
        on left: 34
        on right: 12
    cmd_pop (61)
        on left: 35
        on right: 13
    cmd_push (62)
        on left: 36
        on right: 14
    cmd_reset (63)
        on left: 37
        on right: 15
    cmd_set_info (64)
        on left: 38 39
        on right: 17
    cmd_set_logic (65)
        on left: 40
        on right: 16
    cmd_set_option (66)
        on left: 41
        on right: 18
    cmd_get_unsat_core (67)
        on left: 42
        on right: 19
    sort_dec_list <nodelist> (68)
        on left: 43 44
        on right: 26 44
    sort_dec <curnode> (69)
        on left: 45
        on right: 43 44
    datatype_dec_list <nodelist> (70)
        on left: 46 47
        on right: 26 47
    datatype_dec <curnode> (71)
        on left: 48
        on right: 25 46 47
    constructor_dec_list <nodelist> (72)
        on left: 49 50
        on right: 48 50
    constructor_dec <curnode> (73)
        on left: 51 52
        on right: 49 50
    selector_dec_list <nodelist> (74)
        on left: 53 54
        on right: 52 54
    selector_dec <curnode> (75)
        on left: 55
        on right: 53 54
    a_term <curnode> (76)
        on left: 56 57 58 59 60 61 62 63
        on right: 22 30 31 59 60 61 62 63 66 67 71 77
    qual_identifier <curnode> (77)
        on left: 64 65
        on right: 57 58
    term_list <nodelist> (78)
        on left: 66 67
        on right: 58 67 93 95
    parallel_var_bindings <nodelist> (79)
        on left: 68
        on right: 59
    var_bindings <bindinglist> (80)
        on left: 69 70
        on right: 68 70
    var_binding <binding> (81)
        on left: 71
        on right: 69 70
    sorted_var_list <nodelist> (82)
        on left: 72 73
        on right: 31 60 61 73
    sorted_var <curnode> (83)
        on left: 74
        on right: 72 73
    match_case_list <nodelist> (84)
        on left: 75 76
        on right: 62 76
    match_case <curnode> (85)
        on left: 77
        on right: 75 76
    pattern <curnode> (86)
        on left: 78 79
        on right: 77
    symbol_list <nodelist> (87)
        on left: 80 81
        on right: 79 81
    a_sort <curnode> (88)
        on left: 82 83
        on right: 24 27 28 30 31 32 55 65 74 84 85
    sort_list <nodelist> (89)
        on left: 84 85
        on right: 28 83 85
    attribute_value <curnode> (90)
        on left: 86 87 88 89
        on right: 39 41
    attribute_list <nodelist> (91)
        on left: 90 91
        on right: 63 91
    attribute <curnode> (92)
        on left: 92 93 94 95 96 97 98 99
        on right: 90 91
    index <curnode> (93)
        on left: 100 101
        on right: 102 103
    index_list <nodelist> (94)
        on left: 102 103
        on right: 103 105
    identifier <curnode> (95)
        on left: 104 105
        on right: 64 65 82 83
    spec_constant <curnode> (96)
        on left: 106 107 108 109 110
        on right: 56 86 111
    generic_sexpr <curnode> (97)
        on left: 111 112 113 114 115
        on right: 116 117
    generic_sexpr_list <nodelist> (98)
        on left: 116 117
        on right: 89 115 117


State 0

    0 $accept: • single_command $end

    '('  shift, and go to state 1

    $default  reduce using rule 21 (cmd_error)

    single_command         go to state 2
    command                go to state 3
    cmd_error              go to state 4
    cmd_assert             go to state 5
    cmd_check_sat          go to state 6
    cmd_declare_const      go to state 7
    cmd_declare_datatype   go to state 8
    cmd_declare_datatypes  go to state 9
    cmd_declare_fun        go to state 10
    cmd_declare_sort       go to state 11
    cmd_define_fun         go to state 12
    cmd_define_sort        go to state 13
    cmd_echo               go to state 14
    cmd_exit               go to state 15
    cmd_pop                go to state 16
    cmd_push               go to state 17
    cmd_reset              go to state 18
    cmd_set_info           go to state 19
    cmd_set_logic          go to state 20
    cmd_set_option         go to state 21
    cmd_get_unsat_core     go to state 22


State 1

   22 cmd_assert: '(' • "assert" a_term ')'
   23 cmd_check_sat: '(' • "check-sat" ')'
   24 cmd_declare_const: '(' • "declare-const" SYMBOL a_sort ')'
   25 cmd_declare_datatype: '(' • "declare-datatype" SYMBOL datatype_dec ')'
   26 cmd_declare_datatypes: '(' • "declare-datatypes" '(' sort_dec_list ')' '(' datatype_dec_list ')' ')'
   27 cmd_declare_fun: '(' • "declare-fun" SYMBOL '(' ')' a_sort ')'
   28                | '(' • "declare-fun" SYMBOL '(' sort_list ')' a_sort ')'
   29 cmd_declare_sort: '(' • "declare-sort" SYMBOL NUMERAL ')'
   30 cmd_define_fun: '(' • "define-fun" SYMBOL '(' ')' a_sort a_term ')'
   31               | '(' • "define-fun" SYMBOL '(' sorted_var_list ')' a_sort a_term ')'
   32 cmd_define_sort: '(' • "define-sort" SYMBOL '(' ')' a_sort ')'
   33 cmd_echo: '(' • "echo" STRING ')'
   34 cmd_exit: '(' • "exit" ')'
   35 cmd_pop: '(' • "pop" NUMERAL ')'
   36 cmd_push: '(' • "push" NUMERAL ')'
   37 cmd_reset: '(' • "reset" ')'
   38 cmd_set_info: '(' • "set-info" KEYWORD ')'
   39             | '(' • "set-info" KEYWORD attribute_value ')'
   40 cmd_set_logic: '(' • "set-logic" SYMBOL ')'
   41 cmd_set_option: '(' • "set-option" KEYWORD attribute_value ')'
   42 cmd_get_unsat_core: '(' • "get-unsat-core" ')'

    "assert"             shift, and go to state 23
    "check-sat"          shift, and go to state 24
    "declare-const"      shift, and go to state 25
    "declare-datatype"   shift, and go to state 26
    "declare-datatypes"  shift, and go to state 27
    "declare-fun"        shift, and go to state 28
    "declare-sort"       shift, and go to state 29
    "define-fun"         shift, and go to state 30
    "define-sort"        shift, and go to state 31
    "echo"               shift, and go to state 32
    "exit"               shift, and go to state 33
    "pop"                shift, and go to state 34
    "push"               shift, and go to state 35
    "set-info"           shift, and go to state 36
    "set-logic"          shift, and go to state 37
    "set-option"         shift, and go to state 38
    "get-unsat-core"     shift, and go to state 39
    "reset"              shift, and go to state 40


State 2

    0 $accept: single_command • $end

    $end  shift, and go to state 41


State 3

    1 single_command: command •

    $default  reduce using rule 1 (single_command)


State 4

   20 command: cmd_error •

    $default  reduce using rule 20 (command)


State 5

    2 command: cmd_assert •

    $default  reduce using rule 2 (command)


State 6

    3 command: cmd_check_sat •

    $default  reduce using rule 3 (command)


State 7

    4 command: cmd_declare_const •

    $default  reduce using rule 4 (command)


State 8

    5 command: cmd_declare_datatype •

    $default  reduce using rule 5 (command)


State 9

    6 command: cmd_declare_datatypes •

    $default  reduce using rule 6 (command)


State 10

    7 command: cmd_declare_fun •

    $default  reduce using rule 7 (command)


State 11

    8 command: cmd_declare_sort •

    $default  reduce using rule 8 (command)


State 12

    9 command: cmd_define_fun •

    $default  reduce using rule 9 (command)


State 13

   10 command: cmd_define_sort •

    $default  reduce using rule 10 (command)


State 14

   11 command: cmd_echo •

    $default  reduce using rule 11 (command)


State 15

   12 command: cmd_exit •

    $default  reduce using rule 12 (command)


State 16

   13 command: cmd_pop •

    $default  reduce using rule 13 (command)


State 17

   14 command: cmd_push •

    $default  reduce using rule 14 (command)


State 18

   15 command: cmd_reset •

    $default  reduce using rule 15 (command)


State 19

   17 command: cmd_set_info •

    $default  reduce using rule 17 (command)


State 20

   16 command: cmd_set_logic •

    $default  reduce using rule 16 (command)


State 21

   18 command: cmd_set_option •

    $default  reduce using rule 18 (command)


State 22

   19 command: cmd_get_unsat_core •

    $default  reduce using rule 19 (command)


State 23

   22 cmd_assert: '(' "assert" • a_term ')'

    NUMERAL      shift, and go to state 42
    DECIMAL      shift, and go to state 43
    HEXADECIMAL  shift, and go to state 44
    BINARY       shift, and go to state 45
    SYMBOL       shift, and go to state 46
    STRING       shift, and go to state 47
    '('          shift, and go to state 48

    a_term           go to state 49
    qual_identifier  go to state 50
    identifier       go to state 51
    spec_constant    go to state 52


State 24

   23 cmd_check_sat: '(' "check-sat" • ')'

    ')'  shift, and go to state 53


State 25

   24 cmd_declare_const: '(' "declare-const" • SYMBOL a_sort ')'

    SYMBOL  shift, and go to state 54


State 26

   25 cmd_declare_datatype: '(' "declare-datatype" • SYMBOL datatype_dec ')'

    SYMBOL  shift, and go to state 55


State 27

   26 cmd_declare_datatypes: '(' "declare-datatypes" • '(' sort_dec_list ')' '(' datatype_dec_list ')' ')'

    '('  shift, and go to state 56


State 28

   27 cmd_declare_fun: '(' "declare-fun" • SYMBOL '(' ')' a_sort ')'
   28                | '(' "declare-fun" • SYMBOL '(' sort_list ')' a_sort ')'

    SYMBOL  shift, and go to state 57


State 29

   29 cmd_declare_sort: '(' "declare-sort" • SYMBOL NUMERAL ')'

    SYMBOL  shift, and go to state 58


State 30

   30 cmd_define_fun: '(' "define-fun" • SYMBOL '(' ')' a_sort a_term ')'
   31               | '(' "define-fun" • SYMBOL '(' sorted_var_list ')' a_sort a_term ')'

    SYMBOL  shift, and go to state 59


State 31

   32 cmd_define_sort: '(' "define-sort" • SYMBOL '(' ')' a_sort ')'

    SYMBOL  shift, and go to state 60


State 32

   33 cmd_echo: '(' "echo" • STRING ')'

    STRING  shift, and go to state 61


State 33

   34 cmd_exit: '(' "exit" • ')'

    ')'  shift, and go to state 62


State 34

   35 cmd_pop: '(' "pop" • NUMERAL ')'

    NUMERAL  shift, and go to state 63


State 35

   36 cmd_push: '(' "push" • NUMERAL ')'

    NUMERAL  shift, and go to state 64


State 36

   38 cmd_set_info: '(' "set-info" • KEYWORD ')'
   39             | '(' "set-info" • KEYWORD attribute_value ')'

    KEYWORD  shift, and go to state 65


State 37

   40 cmd_set_logic: '(' "set-logic" • SYMBOL ')'

    SYMBOL  shift, and go to state 66


State 38

   41 cmd_set_option: '(' "set-option" • KEYWORD attribute_value ')'

    KEYWORD  shift, and go to state 67


State 39

   42 cmd_get_unsat_core: '(' "get-unsat-core" • ')'

    ')'  shift, and go to state 68


State 40

   37 cmd_reset: '(' "reset" • ')'

    ')'  shift, and go to state 69


State 41

    0 $accept: single_command $end •

    $default  accept


State 42

  106 spec_constant: NUMERAL •

    $default  reduce using rule 106 (spec_constant)


State 43

  107 spec_constant: DECIMAL •

    $default  reduce using rule 107 (spec_constant)


State 44

  108 spec_constant: HEXADECIMAL •

    $default  reduce using rule 108 (spec_constant)


State 45

  109 spec_constant: BINARY •

    $default  reduce using rule 109 (spec_constant)


State 46

  104 identifier: SYMBOL •

    $default  reduce using rule 104 (identifier)


State 47

  110 spec_constant: STRING •

    $default  reduce using rule 110 (spec_constant)


State 48

   58 a_term: '(' • qual_identifier term_list ')'
   59       | '(' • "let" '(' parallel_var_bindings ')' a_term ')'
   60       | '(' • "forall" '(' sorted_var_list ')' a_term ')'
   61       | '(' • "exists" '(' sorted_var_list ')' a_term ')'
   62       | '(' • "match" a_term '(' match_case_list ')' ')'
   63       | '(' • "!" a_term attribute_list ')'
   65 qual_identifier: '(' • "as" identifier a_sort ')'
  105 identifier: '(' • "_" SYMBOL index_list ')'

    SYMBOL    shift, and go to state 46
    "!"       shift, and go to state 70
    "_"       shift, and go to state 71
    "as"      shift, and go to state 72
    "exists"  shift, and go to state 73
    "forall"  shift, and go to state 74
    "let"     shift, and go to state 75
    "match"   shift, and go to state 76
    '('       shift, and go to state 77

    qual_identifier  go to state 78
    identifier       go to state 51


State 49

   22 cmd_assert: '(' "assert" a_term • ')'

    ')'  shift, and go to state 79


State 50

   57 a_term: qual_identifier •

    $default  reduce using rule 57 (a_term)


State 51

   64 qual_identifier: identifier •

    $default  reduce using rule 64 (qual_identifier)


State 52

   56 a_term: spec_constant •

    $default  reduce using rule 56 (a_term)


State 53

   23 cmd_check_sat: '(' "check-sat" ')' •

    $default  reduce using rule 23 (cmd_check_sat)


State 54

   24 cmd_declare_const: '(' "declare-const" SYMBOL • a_sort ')'

    SYMBOL  shift, and go to state 46
    '('     shift, and go to state 80

    a_sort      go to state 81
    identifier  go to state 82


State 55

   25 cmd_declare_datatype: '(' "declare-datatype" SYMBOL • datatype_dec ')'

    '('  shift, and go to state 83

    datatype_dec  go to state 84


State 56

   26 cmd_declare_datatypes: '(' "declare-datatypes" '(' • sort_dec_list ')' '(' datatype_dec_list ')' ')'

    '('  shift, and go to state 85

    sort_dec_list  go to state 86
    sort_dec       go to state 87


State 57

   27 cmd_declare_fun: '(' "declare-fun" SYMBOL • '(' ')' a_sort ')'
   28                | '(' "declare-fun" SYMBOL • '(' sort_list ')' a_sort ')'

    '('  shift, and go to state 88


State 58

   29 cmd_declare_sort: '(' "declare-sort" SYMBOL • NUMERAL ')'

    NUMERAL  shift, and go to state 89


State 59

   30 cmd_define_fun: '(' "define-fun" SYMBOL • '(' ')' a_sort a_term ')'
   31               | '(' "define-fun" SYMBOL • '(' sorted_var_list ')' a_sort a_term ')'

    '('  shift, and go to state 90


State 60

   32 cmd_define_sort: '(' "define-sort" SYMBOL • '(' ')' a_sort ')'

    '('  shift, and go to state 91


State 61

   33 cmd_echo: '(' "echo" STRING • ')'

    ')'  shift, and go to state 92


State 62

   34 cmd_exit: '(' "exit" ')' •

    $default  reduce using rule 34 (cmd_exit)


State 63

   35 cmd_pop: '(' "pop" NUMERAL • ')'

    ')'  shift, and go to state 93


State 64

   36 cmd_push: '(' "push" NUMERAL • ')'

    ')'  shift, and go to state 94


State 65

   38 cmd_set_info: '(' "set-info" KEYWORD • ')'
   39             | '(' "set-info" KEYWORD • attribute_value ')'

    NUMERAL      shift, and go to state 42
    DECIMAL      shift, and go to state 43
    HEXADECIMAL  shift, and go to state 44
    BINARY       shift, and go to state 45
    SYMBOL       shift, and go to state 95
    STRING       shift, and go to state 47
    '('          shift, and go to state 96
    ')'          shift, and go to state 97

    attribute_value  go to state 98
    spec_constant    go to state 99


State 66

   40 cmd_set_logic: '(' "set-logic" SYMBOL • ')'

    ')'  shift, and go to state 100


State 67

   41 cmd_set_option: '(' "set-option" KEYWORD • attribute_value ')'

    NUMERAL      shift, and go to state 42
    DECIMAL      shift, and go to state 43
    HEXADECIMAL  shift, and go to state 44
    BINARY       shift, and go to state 45
    SYMBOL       shift, and go to state 95
    STRING       shift, and go to state 47
    '('          shift, and go to state 96

    attribute_value  go to state 101
    spec_constant    go to state 99


State 68

   42 cmd_get_unsat_core: '(' "get-unsat-core" ')' •

    $default  reduce using rule 42 (cmd_get_unsat_core)


State 69

   37 cmd_reset: '(' "reset" ')' •

    $default  reduce using rule 37 (cmd_reset)


State 70

   63 a_term: '(' "!" • a_term attribute_list ')'

    NUMERAL      shift, and go to state 42
    DECIMAL      shift, and go to state 43
    HEXADECIMAL  shift, and go to state 44
    BINARY       shift, and go to state 45
    SYMBOL       shift, and go to state 46
    STRING       shift, and go to state 47
    '('          shift, and go to state 48

    a_term           go to state 102
    qual_identifier  go to state 50
    identifier       go to state 51
    spec_constant    go to state 52


State 71

  105 identifier: '(' "_" • SYMBOL index_list ')'

    SYMBOL  shift, and go to state 103


State 72

   65 qual_identifier: '(' "as" • identifier a_sort ')'

    SYMBOL  shift, and go to state 46
    '('     shift, and go to state 104

    identifier  go to state 105


State 73

   61 a_term: '(' "exists" • '(' sorted_var_list ')' a_term ')'

    '('  shift, and go to state 106


State 74

   60 a_term: '(' "forall" • '(' sorted_var_list ')' a_term ')'

    '('  shift, and go to state 107


State 75

   59 a_term: '(' "let" • '(' parallel_var_bindings ')' a_term ')'

    '('  shift, and go to state 108


State 76

   62 a_term: '(' "match" • a_term '(' match_case_list ')' ')'

    NUMERAL      shift, and go to state 42
    DECIMAL      shift, and go to state 43
    HEXADECIMAL  shift, and go to state 44
    BINARY       shift, and go to state 45
    SYMBOL       shift, and go to state 46
    STRING       shift, and go to state 47
    '('          shift, and go to state 48

    a_term           go to state 109
    qual_identifier  go to state 50
    identifier       go to state 51
    spec_constant    go to state 52


State 77

   65 qual_identifier: '(' • "as" identifier a_sort ')'
  105 identifier: '(' • "_" SYMBOL index_list ')'

    "_"   shift, and go to state 71
    "as"  shift, and go to state 72


State 78

   58 a_term: '(' qual_identifier • term_list ')'

    NUMERAL      shift, and go to state 42
    DECIMAL      shift, and go to state 43
    HEXADECIMAL  shift, and go to state 44
    BINARY       shift, and go to state 45
    SYMBOL       shift, and go to state 46
    STRING       shift, and go to state 47
    '('          shift, and go to state 48

    a_term           go to state 110
    qual_identifier  go to state 50
    term_list        go to state 111
    identifier       go to state 51
    spec_constant    go to state 52


State 79

   22 cmd_assert: '(' "assert" a_term ')' •

    $default  reduce using rule 22 (cmd_assert)


State 80

   83 a_sort: '(' • identifier sort_list ')'
  105 identifier: '(' • "_" SYMBOL index_list ')'

    SYMBOL  shift, and go to state 46
    "_"     shift, and go to state 71
    '('     shift, and go to state 104

    identifier  go to state 112


State 81

   24 cmd_declare_const: '(' "declare-const" SYMBOL a_sort • ')'

    ')'  shift, and go to state 113


State 82

   82 a_sort: identifier •

    $default  reduce using rule 82 (a_sort)


State 83

   48 datatype_dec: '(' • constructor_dec_list ')'

    '('  shift, and go to state 114

    constructor_dec_list  go to state 115
    constructor_dec       go to state 116


State 84

   25 cmd_declare_datatype: '(' "declare-datatype" SYMBOL datatype_dec • ')'

    ')'  shift, and go to state 117


State 85

   45 sort_dec: '(' • SYMBOL NUMERAL ')'

    SYMBOL  shift, and go to state 118


State 86

   26 cmd_declare_datatypes: '(' "declare-datatypes" '(' sort_dec_list • ')' '(' datatype_dec_list ')' ')'
   44 sort_dec_list: sort_dec_list • sort_dec

    '('  shift, and go to state 85
    ')'  shift, and go to state 119

    sort_dec  go to state 120


State 87

   43 sort_dec_list: sort_dec •

    $default  reduce using rule 43 (sort_dec_list)


State 88

   27 cmd_declare_fun: '(' "declare-fun" SYMBOL '(' • ')' a_sort ')'
   28                | '(' "declare-fun" SYMBOL '(' • sort_list ')' a_sort ')'

    SYMBOL  shift, and go to state 46
    '('     shift, and go to state 80
    ')'     shift, and go to state 121

    a_sort      go to state 122
    sort_list   go to state 123
    identifier  go to state 82


State 89

   29 cmd_declare_sort: '(' "declare-sort" SYMBOL NUMERAL • ')'

    ')'  shift, and go to state 124


State 90

   30 cmd_define_fun: '(' "define-fun" SYMBOL '(' • ')' a_sort a_term ')'
   31               | '(' "define-fun" SYMBOL '(' • sorted_var_list ')' a_sort a_term ')'

    '('  shift, and go to state 125
    ')'  shift, and go to state 126

    sorted_var_list  go to state 127
    sorted_var       go to state 128


State 91

   32 cmd_define_sort: '(' "define-sort" SYMBOL '(' • ')' a_sort ')'

    ')'  shift, and go to state 129


State 92

   33 cmd_echo: '(' "echo" STRING ')' •

    $default  reduce using rule 33 (cmd_echo)


State 93

   35 cmd_pop: '(' "pop" NUMERAL ')' •

    $default  reduce using rule 35 (cmd_pop)


State 94

   36 cmd_push: '(' "push" NUMERAL ')' •

    $default  reduce using rule 36 (cmd_push)


State 95

   87 attribute_value: SYMBOL •

    $default  reduce using rule 87 (attribute_value)


State 96

   88 attribute_value: '(' • ')'
   89                | '(' • generic_sexpr_list ')'

    NUMERAL      shift, and go to state 42
    DECIMAL      shift, and go to state 43
    HEXADECIMAL  shift, and go to state 44
    BINARY       shift, and go to state 45
    SYMBOL       shift, and go to state 130
    KEYWORD      shift, and go to state 131
    STRING       shift, and go to state 47
    '('          shift, and go to state 132
    ')'          shift, and go to state 133

    spec_constant       go to state 134
    generic_sexpr       go to state 135
    generic_sexpr_list  go to state 136


State 97

   38 cmd_set_info: '(' "set-info" KEYWORD ')' •

    $default  reduce using rule 38 (cmd_set_info)


State 98

   39 cmd_set_info: '(' "set-info" KEYWORD attribute_value • ')'

    ')'  shift, and go to state 137


State 99

   86 attribute_value: spec_constant •

    $default  reduce using rule 86 (attribute_value)


State 100

   40 cmd_set_logic: '(' "set-logic" SYMBOL ')' •

    $default  reduce using rule 40 (cmd_set_logic)


State 101

   41 cmd_set_option: '(' "set-option" KEYWORD attribute_value • ')'

    ')'  shift, and go to state 138


State 102

   63 a_term: '(' "!" a_term • attribute_list ')'

    ":pattern"     shift, and go to state 139
    ":named"       shift, and go to state 140
    ":qid"         shift, and go to state 141
    ":no-pattern"  shift, and go to state 142
    ":skolemid"    shift, and go to state 143
    ":lblpos"      shift, and go to state 144
    ":lblneg"      shift, and go to state 145
    ":weight"      shift, and go to state 146

    attribute_list  go to state 147
    attribute       go to state 148


State 103

  105 identifier: '(' "_" SYMBOL • index_list ')'

    NUMERAL  shift, and go to state 149
    SYMBOL   shift, and go to state 150

    index       go to state 151
    index_list  go to state 152


State 104

  105 identifier: '(' • "_" SYMBOL index_list ')'

    "_"  shift, and go to state 71


State 105

   65 qual_identifier: '(' "as" identifier • a_sort ')'

    SYMBOL  shift, and go to state 46
    '('     shift, and go to state 80

    a_sort      go to state 153
    identifier  go to state 82


State 106

   61 a_term: '(' "exists" '(' • sorted_var_list ')' a_term ')'

    '('  shift, and go to state 125

    sorted_var_list  go to state 154
    sorted_var       go to state 128


State 107

   60 a_term: '(' "forall" '(' • sorted_var_list ')' a_term ')'

    '('  shift, and go to state 125

    sorted_var_list  go to state 155
    sorted_var       go to state 128


State 108

   59 a_term: '(' "let" '(' • parallel_var_bindings ')' a_term ')'

    '('  shift, and go to state 156

    parallel_var_bindings  go to state 157
    var_bindings           go to state 158
    var_binding            go to state 159


State 109

   62 a_term: '(' "match" a_term • '(' match_case_list ')' ')'

    '('  shift, and go to state 160


State 110

   66 term_list: a_term •

    $default  reduce using rule 66 (term_list)


State 111

   58 a_term: '(' qual_identifier term_list • ')'
   67 term_list: term_list • a_term

    NUMERAL      shift, and go to state 42
    DECIMAL      shift, and go to state 43
    HEXADECIMAL  shift, and go to state 44
    BINARY       shift, and go to state 45
    SYMBOL       shift, and go to state 46
    STRING       shift, and go to state 47
    '('          shift, and go to state 48
    ')'          shift, and go to state 161

    a_term           go to state 162
    qual_identifier  go to state 50
    identifier       go to state 51
    spec_constant    go to state 52


State 112

   83 a_sort: '(' identifier • sort_list ')'

    SYMBOL  shift, and go to state 46
    '('     shift, and go to state 80

    a_sort      go to state 122
    sort_list   go to state 163
    identifier  go to state 82


State 113

   24 cmd_declare_const: '(' "declare-const" SYMBOL a_sort ')' •

    $default  reduce using rule 24 (cmd_declare_const)


State 114

   51 constructor_dec: '(' • SYMBOL ')'
   52                | '(' • SYMBOL selector_dec_list ')'

    SYMBOL  shift, and go to state 164


State 115

   48 datatype_dec: '(' constructor_dec_list • ')'
   50 constructor_dec_list: constructor_dec_list • constructor_dec

    '('  shift, and go to state 114
    ')'  shift, and go to state 165

    constructor_dec  go to state 166


State 116

   49 constructor_dec_list: constructor_dec •

    $default  reduce using rule 49 (constructor_dec_list)


State 117

   25 cmd_declare_datatype: '(' "declare-datatype" SYMBOL datatype_dec ')' •

    $default  reduce using rule 25 (cmd_declare_datatype)


State 118

   45 sort_dec: '(' SYMBOL • NUMERAL ')'

    NUMERAL  shift, and go to state 167


State 119

   26 cmd_declare_datatypes: '(' "declare-datatypes" '(' sort_dec_list ')' • '(' datatype_dec_list ')' ')'

    '('  shift, and go to state 168


State 120

   44 sort_dec_list: sort_dec_list sort_dec •

    $default  reduce using rule 44 (sort_dec_list)


State 121
